@@ -1,0 +1,11 @@
+/* This file is still needed because the defines below are
+   AC_DEFINEd in more than one place. */
+
+/* Defined it to "addr32" or "addr32;" to make GAS happy. */
+#undef ADDR32
+
+/* Defined it to "data32" or "data32;" to make GAS happy. */
+#undef DATA32
+
+/* Defined if you have a curses library (ncurses preferred). */
+#undef HAVE_LIBCURSES
